fix gaps in column approximation

--- a/src/routes/SongView/SongView.css
+++ b/src/routes/SongView/SongView.css
@@ -241,3 +241,19 @@
 .fullscreen #inner-background-image {
     display: block;
 }
+
+#song-content-wrapper {
+    column-gap: 1rem;
+}
+
+@media (min-width: theme('screens.sm')) {
+    #song-content-wrapper {
+        column-gap: 2rem;
+    }
+}
+
+@media (min-width: theme('screens.lg')) {
+    #song-content-wrapper {
+        column-gap: 4rem;
+    }
+}
